--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,3 @@
 spring:
-    datasource:
-        url: jdbc:mysql://awseb-e-upqc7wuuzj-stack-awsebrdsdatabase-kfztkaendge0.cqbc7kn1r1su.ap-northeast-2.rds.amazonaws.com:3306/board?useSSL=false&serverTimezone=Asia/Seoul
-        username: fastcam
-        password: s4857769!
-        driver-class-name: com.mysql.cj.jdbc.Driver
-#        url: jdbc:mysql://localhost:3306/board?useSSL=false&serverTimezone=Asia/Seoul
-#        username: root
-#        password: 1234
-#        driver-class-name: com.mysql.cj.jdbc.Driver
-    jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: true
-        properties:
-            hibernate.format_sql: true
-
-
-
-
+    profiles:
+        active: dev
