--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,8 +1,8 @@
 spring:
     datasource:
-        url: jdbc:mysql://awseb-e-upqc7wuuzj-stack-awsebrdsdatabase-kfztkaendge0.cqbc7kn1r1su.ap-northeast-2.rds.amazonaws.com:3306/board?useSSL=false&serverTimezone=Asia/Seoul
-        username: fastcam
-        password: s4857769!
+        url: jdbc:mysql://192.168.219.113:3306/board?useSSL=false&serverTimezone=Asia/Seoul
+        username: root
+        password: root1234!!
         driver-class-name: com.mysql.cj.jdbc.Driver
     jpa:
         hibernate:
