--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,8 +1,8 @@
 spring:
     datasource:
-        url: jdbc:mysql://localhost:3306/board?useSSL=false&serverTimezone=Asia/Seoul
+        url: jdbc:mysql://192.168.219.113:3306/board?useSSL=false&serverTimezone=Asia/Seoul
         username: root
-        password: 1234
+        password: root1234!!
         driver-class-name: com.mysql.cj.jdbc.Driver
     jpa:
         hibernate:
